--- a/WpLunchLister/WpLunchLister.csproj
+++ b/WpLunchLister/WpLunchLister.csproj
@@ -97,10 +97,17 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CordovaSourceDictionary.xml" />
+    <Content Include="www\css\lunchlist.css" />
     <Content Include="www\js\index.js" />
+    <Content Include="www\js\sodexo.js" />
+    <Content Include="www\lib\backbone.js" />
+    <Content Include="www\lib\handlebars-1.0.0.beta.6.js" />
+    <Content Include="www\lib\jquery-1.8.0.js" />
+    <Content Include="www\lib\jquery.jfeed.js" />
+    <Content Include="www\lib\json2.js" />
+    <Content Include="www\lib\underscore.js" />
     <None Include="BuildManifestProcessor.js" />
     <Content Include="CordovaLib\WP7CordovaClassLib.dll" />
-    <Content Include="www\cordova-2.0.0.js" />
     <Content Include="www\css\index.css" />
     <Content Include="www\img\cordova.png" />
     <Content Include="www\index.html">
